--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-pro": "^5.6.3",
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.2.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
@@ -23,6 +23,7 @@
     "dependencies": {
         "laravel-echo": "^1.5.2",
         "pusher-js": "^4.3.1",
-        "vuex": "^3.0.1"
+        "vuex": "^3.0.1",
+        "pluralize": "^7.0.0"
     }
 }
